# django-google-json-style-api

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  pytest.ini  tox.ini
django_google_json_style_api/: __init__.py  base.py  decorators.py  exceptions.py  requests.py  responses.py
example/cities/: models.py  schemas.py  tests.py  urls.py  views.py
example/cities/migrations/: 0001_initial.py
example/example/: settings.py  urls.py
tests/: test_all_in_one.py  test_base.py  test_base_empty_success_response.py
