[tool.poetry]
name = "django-google-json-style-api"
version = "0.3.2"
description = "Implementation of Google JSON Style Guide for Django"
authors = ["Andrey Zevakin"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/azevakin/django-google-json-style-api"
repository = "https://github.com/azevakin/django-google-json-style-api"
keywords = ["django", "pydantic", "json", "api"]
include = ["LICENSE"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.0"
pydantic = "^1.8.0"

[tool.poetry.dev-dependencies]
pre-commit = "^2.15.0"
black = "^21.9b0"
autoflake = "^1.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
experimental-string-processing = true
target-version = ["py39"]


[tool.isort]
profile = "black"
combine_as_imports = true
known_django = "django"
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "DJANGO", "FIRSTPARTY", "LOCALFOLDER"]
